# handyman

./: .gitignore  README.md  package.json  pyproject.toml  setup.cfg
.github/workflows/: cd.yaml
src/: asgi.py  urls.py  utils.py  wsgi.py
src/apps/checkout/: admin.py  apps.py  models.py  views.py
src/apps/checkout/logic/: form.py  request.py
src/apps/checkout/migrations/: 0001_initial.py  0002_auto_20210209_1555.py  0003_auto_20210209_1600.py  0004_auto_20210213_1400.py  0005_stage_name.py  0006_auto_20210214_1336.py
src/apps/checkout/static/js/: checkout-components.js  vue.js
src/apps/checkout/templates/: checkout-contact.html  checkout-customize.html  form.html  index.html  pricing.html  stage.html  success.html
src/apps/form/: admin.py  models.py  views.py
src/apps/form/logic/: form.py
src/apps/form/migrations/: 0001_initial.py  0002_auto_20210206_1126.py
src/apps/form/templates/: form.html  index.html
src/apps/main/: views.py
src/apps/main/static/js/: main-components.js
src/apps/main/templates/: about.html  automation.html  base.html  footer.html  hero.html  main.html  product-showcase-1.html  product-showcase-2.html  section-about.html  section-automation.html  section-product-showcase-1.html  section-product-showcase-2.html  section-testimonials.html  testimonials.html
src/apps/theme/static/css/: compiled.css
src/apps/theme/templates/: theme.html
src/settings/: __init__.py
src/settings/components/: common.py
src/settings/environments/: development.py  production.py
tests/: test_urls.py
tests/apps/checkout/: test-models.py
(+3 files in other folders)
